--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost3306/firuzdb?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=firuz1999
+
+# spring.jpa.generate-ddl=true
 
